fix(ui): adjust font size in countdown for better readability

--- a/static/countdown.css
+++ b/static/countdown.css
@@ -14,7 +14,7 @@
 
 #content {
     height: 100vh;
-    font-size: 2em;
+    font-size: max(2.5vw, 24px);
     text-align: center;
     z-index: -1;
     margin-bottom: 4em;
